log
Wed, Apr 16, 2025  8:39:55 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  8:40:14 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1a56170
Wed, Apr 16, 2025  8:42:01 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
a215379
Wed, Apr 16, 2025  9:03:25 AM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
55ecd72
Wed, Apr 16, 2025  9:04:38 AM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
ef1ac93
Wed, Apr 16, 2025  9:13:15 AM: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
e402773
Wed, Apr 16, 2025  9:14:37 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f303ce
Wed, Apr 16, 2025  9:22:17 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7df17a0
Wed, Apr 16, 2025  9:22:36 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
48b91b7
Wed, Apr 16, 2025  9:26:41 AM: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:24: error: implicit declaration of function 'stdrup' [-Werror=implicit-function-declaration]
         current->key = stdrup(key);
                        ^~~~~~
hashmap.c:58:22: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         current->key = stdrup(key);
                      ^
cc1.exe: all warnings being treated as errors
d3cf6a7
Wed, Apr 16, 2025  9:30:39 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
12b50ff
Wed, Apr 16, 2025 10:02:51 AM: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e030423
Wed, Apr 16, 2025 10:07:58 AM: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 20/70
16f305b
Fri, Apr 18, 2025  2:06:47 PM: 
 tests:  0|0
95dbcbb
Fri, Apr 18, 2025  2:09:23 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8f56648
Fri, Apr 18, 2025  2:11:26 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
77deccb
Fri, Apr 18, 2025  2:11:41 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
65a3055
Fri, Apr 18, 2025  2:13:17 PM: 
 hashmap.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  0|0
1915723
Fri, Apr 18, 2025  2:15:37 PM: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  0|0
3ae51b1
Fri, Apr 18, 2025  2:16:15 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1402af3
Fri, Apr 18, 2025 11:07:58 PM: 
 hashmap.c | 34 ++++++++++++++--------------------
 1 file changed, 14 insertions(+), 20 deletions(-)
 tests:  0|0
c14e403
Fri, Apr 18, 2025 11:12:06 PM: 
 hashmap.c | 34 ++++++++++++++++++++--------------
 1 file changed, 20 insertions(+), 14 deletions(-)
 tests:  0|0
80c43f3
Fri, Apr 18, 2025 11:13:16 PM: 
 hashmap.c | 37 ++++++++++++++++---------------------
 1 file changed, 16 insertions(+), 21 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c:42:1: error: unknown type name 'oid'
 oid insertMap(HashMap * map, char * key, void * value) {
 ^~~
hashmap.c:42:5: error: conflicting types for 'insertMap'
 oid insertMap(HashMap * map, char * key, void * value) {
     ^~~~~~~~~
In file included from hashmap.c:6:0,
                 from test.c:4:
hashmap.h:22:6: note: previous declaration of 'insertMap' was here
 void insertMap(HashMap * table, char * key, void * value);
      ^~~~~~~~~
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:53:13: error: 'return' with no value, in function returning non-void [-Werror]
             return;
             ^~~~~~
In file included from test.c:4:0:
hashmap.c:42:5: note: declared here
 oid insertMap(HashMap * map, char * key, void * value) {
     ^~~~~~~~~
cc1.exe: all warnings being treated as errors
62aab40
Fri, Apr 18, 2025 11:13:26 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b52be2d
Sat, Apr 19, 2025 12:19:41 AM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:118:38: error: statement with no effect [-Werror=unused-value]
             map->buckets[index]->key == NULL;
                                      ^
hashmap.c:119:40: error: statement with no effect [-Werror=unused-value]
             map->buckets[index]->value == NULL;
                                        ^
hashmap.c:120:13: error: 'return' with no value, in function returning non-void [-Werror]
             return;
             ^~~~~~
hashmap.c:114:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
cbb0a6e
Sat, Apr 19, 2025 12:20:05 AM: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:113:38: error: statement with no effect [-Werror=unused-value]
             map->buckets[index]->key == NULL;
                                      ^
hashmap.c:114:40: error: statement with no effect [-Werror=unused-value]
             map->buckets[index]->value == NULL;
                                        ^
cc1.exe: all warnings being treated as errors
5db62ed
Sat, Apr 19, 2025 12:20:13 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a2ea97c
Sat, Apr 19, 2025 12:20:37 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d9228ff
